--- a/index.html
+++ b/index.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="UTF-8">
+</head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>
 <b>You are browsing this site with:</b>
-<%Response.Write(Request.ServerVariables("http_user_agent"))%>
+<span id="userAgent"></span>
 </p>
 <p>
-<b>Your IP address is:</b>
-<%Response.Write(Request.ServerVariables("remote_addr"))%>
+<b>Your host name:</b>
+<span id="hostname"></span>
 </p>
 <p>
-<b>The DNS lookup of the IP address is:</b>
-<%Response.Write(Request.ServerVariables("remote_host"))%>
-</p>
-<p>
-<b>The method used to call the page:</b>
-<%Response.Write(Request.ServerVariables("request_method"))%>
+<b>The protocol used:</b>
+<span id="protocol"></span>
 </p>
 <p>
 <b>The server's domain name:</b>
-<%Response.Write(Request.ServerVariables("server_name"))%>
+<span id="domain"></span>
 </p>
 <p>
 <b>The server's port:</b>
-<%Response.Write(Request.ServerVariables("server_port"))%>
+<span id="port"></span>
 </p>
-<p>
-<b>The server's software:</b>
-<%Response.Write(Request.ServerVariables("server_software"))%>
-</p>
+
+<script>
+    document.getElementById('userAgent').textContent = navigator.userAgent;
+    document.getElementById('hostname').textContent = window.location.hostname;
+    document.getElementById('protocol').textContent = window.location.protocol;
+    document.getElementById('domain').textContent = window.location.host;
+    document.getElementById('port').textContent = window.location.port || '80/443';
+</script>
 </body>
 </html>
