--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 <b>Your IP address is:</b>
 <span id="ipAddress">Loading...</span>
 </p>
+<p>
+<b>Your Local IP address is:</b>
+<span id="localIpAddress">Detecting...</span>
+</p>
 
 <script>
     document.getElementById('userAgent').textContent = navigator.userAgent;
@@ -46,6 +50,32 @@
         .catch(error => {
             document.getElementById('ipAddress').textContent = 'Unable to fetch IP';
         });
+
+    async function getLocalIPs() {
+        try {
+            const peerConnection = new RTCPeerConnection({
+                iceServers: [{ urls: 'stun:stun.l.google.com:19302' }]
+            });
+            
+            peerConnection.createDataChannel('');
+            await peerConnection.createOffer().then(o => peerConnection.setLocalDescription(o));
+
+            peerConnection.onicecandidate = function(e) {
+                if (!e.candidate) return;
+                
+                const ipRegex = /([0-9]{1,3}(\.[0-9]{1,3}){3})/;
+                const match = ipRegex.exec(e.candidate.candidate);
+                if (match) {
+                    document.getElementById('localIpAddress').textContent = match[1];
+                    peerConnection.close();
+                }
+            };
+        } catch (err) {
+            document.getElementById('localIpAddress').textContent = 'Unable to detect local IP';
+        }
+    }
+
+    getLocalIPs();
 </script>
 </body>
 </html>
